# dotfiles

./: .gitignore  .gitmodules  .wezterm.lua  PowerShell_Profile.ps1  README.md  docker_service.zsh  dotfile.py  env_start.sh  essential_packages.zsh  firefox.py  firefox_prefs.js  gitconfig  install.py  install_new.py  linux_recipe.yaml  log.py  pyproject.toml  rainmeter_layout.ini  scratch_windows_start.ps1  scratch_wsl_start.sh  setup_wsl.zsh  sync.sh  sync.zsh  terminal.settings.json  test.py  test.yaml  test_pkg.yaml  utils.py  vimrc  vlcrc  wezterm.lua  windows_font_installer.py  windows_recipe.py  windows_recipe.yaml  windows_start.ps1  winget.settings.json  wsl.conf  wsl_recipe.py  wsl_recipe.yaml  wsl_start.sh  (+2 more)
.dotfiles/: install.conf.yaml  zshrc
.dotfiles_ubuntu/: Essentials.pckg  essential_packages.sh  install.conf.yaml  vimrc  zshrc
PowerToys/: PowerToys.settings.json
Windows Terminal/: settings.json
alacritty/: .alacritty.yml  alacritty.toml  alacritty.yml
ansible/: ansible.cfg  arch.yml  archwsl.yml  debian.yaml  hosts.ini  windows.yml  windows_wip.yml
cfg/: .bashrc  .vimrc  terminal.settings.json
docker/: composer.yaml  daemon.json
dotfiles_ubuntu/: Essentials.pckg  essential_packages.sh  essential_packages.zsh  install.conf.yaml  vimrc  zshenv  zshrc
dotfiles_wsl/: setup_node.zsh  setup_zsh.zsh
install_scripts/: initial-setup-archwsl.sh  install-docker.sh  install-genie.sh  install-n.sh  install-node.sh  install-standardnotes.sh  install-waterfox.sh  start-windows.ps1  ubuntu-install-docker.sh
scratch_cfg/: .bashrc
scripts/: yts-get  (+20 more)
(+73 files in other folders)
